--- a/proglangs.html
+++ b/proglangs.html
@@ -25,30 +25,57 @@
 </head>
 <body>
 
-	<ul>
-		<li>ActionScript</li>
-		<li>AppleScript</li>
-		<li>Asp</li>
-		<li>BASIC</li>
-		<li>C</li>
-		<li>C++</li>
-		<li>Clojure</li>
-		<li>COBOL</li>
-		<li>ColdFusion</li>
-		<li>Erlang</li>
-		<li>Fortran</li>
-		<li>Groovy</li>
-		<li>Haskell</li>
-		<li>Java</li>
-		<li>JavaScript</li>
-		<li>Lisp</li>
-		<li>Perl</li>
-		<li>PHP</li>
-		<li>Python</li>
-		<li>Ruby</li>
-		<li>Scala</li>
-		<li>Scheme</li>
+	<ul class="listestil">
+		<li id="top_5">ActionScript</li>
+		<li id="top_5">AppleScript</li>
+		<li id="top_5">Asp</li>
+		<li id="top_5">BASIC</li>
+		<li id="top_5">C</li>
+		<li id="de_neste_3">C++</li>
+		<li id="de_neste_3">Clojure</li>
+		<li id="de_neste_3">COBOL</li>
+		<li id="de_neste_4">ColdFusion</li>
+		<li id="de_neste_4">Erlang</li>
+		<li id="de_neste_4">Fortran</li>
+		<li id="de_neste_4">Groovy</li>
+		<li id="to_i_midten">Haskell</li>
+		<li id="to_i_midten">Java</li>
+		<li id="de_nest_siste">JavaScript</li>
+		<li id="de_nest_siste">Lisp</li>
+		<li id="de_nest_siste">Perl</li>
+		<li id="de_nest_siste">PHP</li>
+		<li id="de_siste_4">Python</li>
+		<li id="de_siste_4">Ruby</li>
+		<li id="de_siste_4">Scala</li>
+		<li id="de_siste_4">Scheme</li>
 	</ul>
+
+
+<select>
+	<option value="ActionScript">ActionScript</option>
+	<option value="AppleScript">AppleScript</option>
+	<option value="Asp">Asp</option>
+	<option value="BASIC">BASIC</option>
+	<option value="C">C</option>
+	<option value="C++">C++</option>
+	<option value="Clojure">Clojure</option>
+	<option value="COBOL">COBOL</option>
+	<option value="ColdFusion">ColdFusion</option>
+	<option value="Erlang">Erlang</option>
+	<option value="Fortran">Fortran</option>
+	<option value="Groovy">Groovy</option>
+	<option value="Haskell">Haskell</option>
+	<option value="Java">Java</option>
+	<option value="JavaScript">JavaScript</option>
+	<option value="Lisp">Lisp</option>
+	<option value="Perl">Perl</option>
+	<option value="PHP">PHP</option>
+	<option value="Python">Python</option>
+	<option value="Ruby">Ruby</option>
+	<option value="Scala">Scala</option>
+	<option value="Scheme">Scheme</option>
+<select>
+
 
 </body>
 </html>
