Formatering av select boks område
La til horisontal linje.
Innkaplset select boks i <div> og gav den en <label>
La til sourcing av javascript fil

--- a/proglangs.html
+++ b/proglangs.html
@@ -13,9 +13,9 @@
  <title>Programmeringsspråk (versjon 0.0.1)</title>
  
  <!-- Laste inn Javascript biblioteker her -->
- <!-- Fjern kommentarmerkene for å inkludere jquery biblioteket (sist hentet 23.08.2013)  -->
- <script type="text/javascript" src="jquery-1.10.2.min.js"></script>
-
+ <!-- Fjern kommentarmerkene for å inkludere jquery biblioteket (sist hentet 23.08.2013) (Ikke nødvendig i lab1) -->
+ <!-- <script type="text/javascript" src="jquery-1.10.2.min.js"></script> -->
+<script type="text/javascript" src="proglangs.js"></script>
  
  <!-- Inkludere CSS her -->
  <!-- Fjern kommentarmerkene for å inkludere dine stiler -->
@@ -50,32 +50,36 @@
 		<li id="de_siste_4">Scheme</li>
 	</ul>
 
-
-<select>
-	<option value="ActionScript">ActionScript</option>
-	<option value="AppleScript">AppleScript</option>
-	<option value="Asp">Asp</option>
-	<option value="BASIC">BASIC</option>
-	<option value="C">C</option>
-	<option value="C++">C++</option>
-	<option value="Clojure">Clojure</option>
-	<option value="COBOL">COBOL</option>
-	<option value="ColdFusion">ColdFusion</option>
-	<option value="Erlang">Erlang</option>
-	<option value="Fortran">Fortran</option>
-	<option value="Groovy">Groovy</option>
-	<option value="Haskell">Haskell</option>
-	<option value="Java">Java</option>
-	<option value="JavaScript">JavaScript</option>
-	<option value="Lisp">Lisp</option>
-	<option value="Perl">Perl</option>
-	<option value="PHP">PHP</option>
-	<option value="Python">Python</option>
-	<option value="Ruby">Ruby</option>
-	<option value="Scala">Scala</option>
-	<option value="Scheme">Scheme</option>
-<select>
-
+<hr>
+<div align="center">
+<form>
+	<label for="proglangs">Velg et språk:</label>
+	<select>
+		<option value="ActionScript">ActionScript</option>
+		<option value="AppleScript">AppleScript</option>
+		<option value="Asp">Asp</option>
+		<option value="BASIC">BASIC</option>
+		<option value="C">C</option>
+		<option value="C++">C++</option>
+		<option value="Clojure">Clojure</option>
+		<option value="COBOL">COBOL</option>
+		<option value="ColdFusion">ColdFusion</option>
+		<option value="Erlang">Erlang</option>
+		<option value="Fortran">Fortran</option>
+		<option value="Groovy">Groovy</option>
+		<option value="Haskell">Haskell</option>
+		<option value="Java">Java</option>
+		<option value="JavaScript">JavaScript</option>
+		<option value="Lisp">Lisp</option>
+		<option value="Perl">Perl</option>
+		<option value="PHP">PHP</option>
+		<option value="Python">Python</option>
+		<option value="Ruby">Ruby</option>
+		<option value="Scala">Scala</option>
+		<option value="Scheme">Scheme</option>
+	<select>
+</form>
+</div>
 
 </body>
 </html>
