La til kommentar om tidsbruk

--- a/proglangs.html
+++ b/proglangs.html
@@ -4,7 +4,7 @@
   LAB1
   Navn: Christer Jonassen
   Jeg samarbeidet med: Pål Sandnes og Christoffer Lien
-  Tiden jeg har brukt på oppgaven: ...
+  Tiden jeg har brukt på oppgaven: 5 timer (fordelt på 2 dager)
 -->
 
 <html>
