--- a/proglangs.html
+++ b/proglangs.html
@@ -57,10 +57,10 @@
 
 <!-- Site navigation menu -->
 <ul class="navbar">
-  <li><a href="index.html">Hjem</a>
-  <li><a href="musings.html">Kronologisk</a>
-  <li><a href="town.html">Hierarkisk</a>
-  <li><a href="links.html">Alfabetisk</a>
+  <li><a href="proglangs.html">Hjem</a>
+  <li><a onclick="popupboks()" href="proglangs.html">Kronologisk</a>
+  <li><a onclick="popupboks()" href="proglangs.html">Hierarkisk</a>
+  <li><a onclick="popupboks()" href="proglangs.html">Alfabetisk</a>
 </ul>
 
 <div id="listestil">	 <!-- Sentrer rullegardin liste og utdataboks ved hjelp av div -->
@@ -90,14 +90,13 @@
 		<option value="Scala">Scala</option>
 		<option value="Scheme">Scheme</option>
 	</select>
-	 <!-- Feltet nedenfor vil bli manipulert av prolangs.js når noe blir valgt i rullegardin listen -->
-	<span id="utdataboks">Du har ikke valgt noe programmeringsspråk enda. Velg ett fra rullegardin-listen!</span>
 </form>
 
 
 </div>
 
 <h1>Programmeringsspråk, hva er det?</h1>
-<p> Her er ett avsnitt.</p>
+<!-- Feltet nedenfor vil bli manipulert av prolangs.js når noe blir valgt i rullegardin listen -->
+<span id="utdataboks">Velkommen til en mystisk verden av programmeringsspråk</span>
 </body>
 </html>
