--- a/lab3/lab3_v1.html
+++ b/lab3/lab3_v1.html
@@ -5,7 +5,7 @@
 	<title>Hendelser med jQuery</title>
 	<!-- Husk å legge til CSS filen din her" -->
 	<script src="js/jquery-1.8.1.js"></script>
-	<link rel="stylesheet" href="css/lab3.css" type="text/css" media="all" />
+	<link rel="stylesheet" href="css/lab3.css" type="text/css" />
     <script>
 	
 	$(function() {
