--- a/lab3/lab3_v2.html
+++ b/lab3/lab3_v2.html
@@ -4,6 +4,7 @@
 	<meta charset="utf-8">
 	<title>Hendelser med jQuery</title>
 	<!-- Husk å legge til CSS filen din her" -->
+	<link rel="stylesheet" href="css/lab3.css" type="text/css" />
 	<script src="js/jquery-1.8.1.js"></script>
     <script>
 	
@@ -33,10 +34,16 @@
 		*/
 			// Skriv koordinatene ut til console basert på lab3_v1
 			// oppgave 2 a) besvares her
+			console.log( "(x,y) = ("+mouse.x+","+mouse.y+")" );
 		   
 			// Her skrives koordinatene ut til en <span> node
 			// Man skriver til innerHTML og også legger på stil (farge osv.)
 			// oppgave 2 b) besvares her
+		    $("#x").addClass("horisontal");
+            $("#y").addClass("vertikal");
+			$("#x").html(mouse.x);
+            $("#y").html(mouse.y);
+            $("#my_canvas").addClass("my_canvas");
 			
 			return false;
 		});
@@ -53,6 +60,7 @@
 		</ul>
 	</p>
 	<canvas id="my_canvas" width="200" height="200"></canvas>
-	<!-- Oppgaveløsning skal implementeres her -->
+	<p>Avstand fra den venstre kanten av Canvas er <span id="x"></span></p>
+	<p>Avstand fra den øverste kanten av Canvas er <span id="y"></span></p>
 </body>
 </html>
