--- a/lab3/lab3_v3.html
+++ b/lab3/lab3_v3.html
@@ -8,6 +8,7 @@
 	<script src="js/jcanvas.min.js"></script>
 	
 	<!-- Husk å legge til CSS filen din her" -->
+	<link rel="stylesheet" href="css/lab3.css" type="text/css" />
 	
     <script>
 	$(function() {
@@ -41,9 +42,15 @@
 		*/
 			// Skriv koordinatene ut til console basert på lab3_v2
 			// Kopier fra lab2_v2
-			
+			console.log( "(x,y) = ("+mouse.x+","+mouse.y+")" );
+
 			// Her bare kopieres lignende løsning fra lab3_v2
 			// for å skrive ut til <span> elementnoden
+			$("#x").addClass("horisontal");
+            $("#y").addClass("vertikal");
+			$("#x").html(mouse.x);
+            $("#y").html(mouse.y);
+            $("#my_canvas").addClass("my_canvas");
 			
 			// Dette er kode for deloppgave 2
 			// Her er to metoder kalt opp etter hverandre og begge tilhører objektet canvas
@@ -54,6 +61,14 @@
 			})
 			.drawText({
 				// Her besvares deloppgave 2 (se lenken til jCanvas dokumentasjon i oppgaveteksten)
+				fillStyle: "#333",
+                x: mouse.x,
+                y: mouse.y,
+                strokeStyle: "#000",
+				strokeWidth: "1",
+                font: "8pt Verdana, sansserif",
+                text: mouse.x + "," + mouse.y
+
 			});
 			
 			return false;
@@ -72,5 +87,7 @@
 	</p>
 	<canvas id="my_canvas" width="200" height="200"></canvas>
 	<!-- Oppgaveløsning skal implementeres her -->
+	<p>Avstand fra den venstre kanten av Canvas er <span id="x"></span></p>
+	<p>Avstand fra den øverste kanten av Canvas er <span id="y"></span></p>
 </body>
 </html>
