--- a/lab4/lab4.html
+++ b/lab4/lab4.html
@@ -1,6 +1,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
+	<!-- Har samarbeidet med Christoffer Lien, og noe med Pål Sandnes -->
+	<!-- Har brukt 8-9 timer fordelt på 2 dager -->
 	<meta charset="utf-8">
 	<title>LAB4 alfabetisk liste</title>
 	<link rel="stylesheet" href="lab4.css" type="text/css">
@@ -11,17 +13,17 @@
 		$(function() {
 				//Markere lenken og rulle til det valgte elementet i DOM
 				$( ".firstUL li" ).each(function() { 
-					$( this ).click(function) { // Fange hendelsen når bruker klikker en av bokstavene
+					$( this ).click(function() { // Fange hendelsen når bruker klikker en av bokstavene
 						$( ".firstUL li" ).removeClass( "selected" ); 	// I utgangspunktet fjerne klassen "selected", hvis den finnes
 						$( this ).addClass( "selected" ); 				// Legg til "selected" klassen til det elementet brukeren har klikket på
 						elementClick = $( this ).attr( "id" ); 			// Få tak i den tilsvarende "id", altså "a", "b", osv.
 
 						// Rulle til det valgte DOM-elementet content-for-X, der "X" er tilsvarende valgt bokstav
-						$( ".content-container" ).scrollTo($( "content-for-"+elementClick ), 800);
+						$( ".content-container" ).scrollTo($( "#content-for-"+elementClick ), 800);
 
 						// Endre bakgrunnsfarge
-						$( ".content-container div" ).css{ 'background-color' : '#ffffff' };
-						$( ".content-container #content-for-"+elementClick ).css{ 'background-color' : '#d2e2fc' };
+						$( ".content-container div" ).css( { 'background-color' : '#ffffff' } );
+						$( ".content-container #content-for-"+elementClick ).css( { 'background-color' : '#d2e2fc' } );
 					});
 				});
 
@@ -34,10 +36,10 @@
 					// Legg til klassen selected til første bokstav i alfabetet
 					$( "a" ).addClass( "selected" );
 					// Rulle til et element, "A" i dette tilfellet.
-					$( ".content-container" ).scrollTo($( "content-for-a" ), 800);
+					$( ".content-container" ).scrollTo($( "#content-for-a" ), 800);
 					// Sette bakgrunnsfargen til hvit til alle div og til lyseblått for valgt div, altså (a i tilfellet)
-					$( ".content-container div" ).css{ 'background-color' : '#ffffff' };
-					$( ".content-container #content-for-a" ).css{ 'background-color' : '#d2e2fc' };
+					$( ".content-container div" ).css( { 'background-color' : '#ffffff' } );
+					$( ".content-container #content-for-a" ).css( { 'background-color' : '#d2e2fc' } );
 
 
 				});
@@ -84,53 +86,61 @@
 			<div id="content-for-b" style="background-color: #d2e2fc">
 				<!-- Innhold for B -->
 				<dl>
-					<dt>Språk</dt>
+					<dt>B</dt>
 						<dd>
-							Lim inn tekst her
+							B er et programmeringsspråk som ble utviklet ved AT&T Bell Laboratories i 1969. Språket ble opprinnelig utviklet av Ken Thompson, og ble senere videreutviklet av Thompson og Dennis Ritchie.
+							B var en forenklet versjon av programmeringsspråket BCPL. B ble erstattet av programmeringsspråket C i 1973, og er idag nesten ikke lenger i bruk.
 						</dd>
-					<dt>Språk2</dt>
+					<dt>BASIC</dt>
 						<dd>
-							Lim inn tekst her
+							BASIC (akronym for Beginner's All-purpose Symbolic Instruction Code) er et programmeringsspråk som ble utviklet i USA i 1963, av John George Kemeny og Thomas Eugene Kurtz på Dartmouth College, med det mål for øye å gjøre programmering enklere. BASIC er et relativt lettfattelig programmeringsspråk og benytter seg av bestemte engelske ord i sine kommandoer.
+							Eksempler på BASIC-dialekter som brukes i dag er Visual Basic, QBasic, REALBasic, DarkBasic, BlitzBasic, iBasic, Liberty Basic og PureBasic.
 						</dd>
 				</dl>
+				<p class="return-to-top">Tilbake til toppen</p>
 			</div>
 
 			<!-- C -->
 			<div id="content-for-c" style="background-color: #d2e2fc">
 				<!-- Innhold for C -->
 				<dl>
-					<dt>Språk</dt>
+					<dt>C</dt>
 						<dd>
-							Lim inn tekst her
+							C er et høynivå programmeringsspråk. Med dette språket er det mulig å uttrykke seg svært maskinnært til høynivåspråk å være. Til forskjell fra lavnivåspråkene kan C-kode kompileres for de fleste maskiner. Siden en både kan uttrykke seg maskinnært og samtidig enkelt flytte programmer mellom ulike maskiner, kan en si at C inntar et mellomnivå mellom høynivåspråk og lavnivåspråk, som er årsaken til at C av og til kalles et "portabelt assemblerspråk".
+							Språket ble utviklet fra 1969 til 1973 av Dennis Ritchie i forbindelse med implementasjonen av Unix, og er så anvendelig at det brukes til de fleste oppgaver. Mange andre språk har en syntaks som ligner på C, slik som Perl og Java, men oppbyggingen av disse språkene er annerledes. Direkte etterfølgere av C er Objective-C og C++.
 						</dd>
-					<dt>Språk2</dt>
+					<dt>C--</dt>
 						<dd>
-							Lim inn tekst her
+							C-- er et programmeringsspråk som ligner på, og er avledet av programmeringsspråket C. Språket ble skapt av forskerne Simon Peyton Jones og Norman Ramsey innenfor funksjonsorientert programmering. Det blir generert av kompilatorer som et mellomliggende språk på et svært høyt nivå. Ulikt mange andre mellomliggende språk, blir det representert gjennom ren ASCII-tekst, og ikke bytekode eller noe annet binært format.
 						</dd>
 				</dl>
+				<p class="return-to-top">Tilbake til toppen</p>
 			</div>
 
 			<!-- D -->
 			<div id="content-for-d" style="background-color: #d2e2fc">
 				<!-- Innhold for D -->
 				<dl>
-					<dt>Språk</dt>
+					<dt>D</dt>
 						<dd>
-							Lim inn tekst her
+							D er et programmeringsspråk utviklet av Walter Bright. Det tar mål av seg til å kombinere ytelse og fleksibillitet fra språk som C og C++, med høynivåfunksjonalitet og programmerervennlighet fra språk som Ruby og Python. D er et multiparadigmespråk, og har egne primitiver for å støtte både imperativ, funksjonell, generisk og objektorientert programmering. Språket bruker en syntaks som er svært lik den som brukes i C, C++, Java og C#.
 						</dd>
-					<dt>Språk2</dt>
+					<dt>Delphi</dt>
 						<dd>
-							Lim inn tekst her
+							Delphi er et programvareutviklingsmiljø (Integrated Development Environment (IDE)) basert på programmeringsspråket Pascal. Grunnlaget var det særdeles populære verktøyet Turbo Pascal for PC med en effektiv kompilator utviklet under ledelse av Anders Hejlsberg. Borland Software Inc. utviklet en objektbasert utvidelse kalt Object Pascal som de i neste runde tilpasset for bruk mot Windows («Objekt Pascal for Windows»). De neste versjonene ble lansert under navnet Delphi.
+							Lenge kunne Delphi kun generere applikasjoner for Windows, men nå finnes også varianter som genererer for Linux (hvor kompilatoren kalles Kylix) og web-applikasjoner for .NET- og PHP-rammeverkene.
+							Delphi hører inn under verktøyfamilien CodeGear som nylig ble solgt fra Borland til Embarcadero Technologies, Inc.
 						</dd>
 				</dl>
+				<p class="return-to-top">Tilbake til toppen</p>
 			</div>
 
 		</div>
 
 	</div>
 
-	<address>Laget 14.okt <br>
-		av Christer "Leet" Jonassen</address>
+	<address>Laget 14. og 21. okt <br>
+		av Christer Jonassen</address>
 </body>
 
 
